add information about device. need fix views

--- a/AhMyth-Server/app/app/lab.html
+++ b/AhMyth-Server/app/app/lab.html
@@ -72,6 +72,9 @@
                     <a class="item " ng-click="goToPage('callsLogs')">
                         <i class="black call icon "></i> Calls Logs
                     </a>
+					<a class="item " ng-click="goToPage('information')">
+                        <i class="black call icon "></i> Info
+                    </a>
                 </div>
 
             </div>
